2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	Released 2.0.0.

2010-01-05  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (_DARWIN_C_SOURCE): Define on frapple.

2009-12-22  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Do not use echo -n.

2009-12-15  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Bump version to 2.0.0.

2009-11-05  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c (main): Call assuan_pipe_connect instead
	of assuan_pipe_connect_ext.

2009-11-04  Werner Koch  <wk@g10code.com>

	* tests/fdpassing.c (register_commands): Add NULL arg to
	assuan_register_command.

2009-10-16  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Remove --with-pth-prefix from configure invocation.
	* configure.ac (_ASSUAN_IN_LIBASSUAN, PTH_SYSCALL_SOFT): Do not
	set anymore.
	(GNUPG_PATH_PTH): Don't invoke.
	(HAVE_PTH): Remove conditional.
	(LIBASSUAN_CONFIG_THREAD_MODULES): Removed.

2009-10-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: AC_REPLACE_FUNCS for vasprintf.

2009-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c: Update to new API.
	* configure.ac: Check for stdint.h and inttypes.h.  Invoke
	AC_TYPE_UINTPTR_T.

2009-09-08  Marcus Brinkmann  <marcus@g10code.de>

	* m4/gpg-error.m4: New file.

2009-09-01  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Set BUILD_REVISION and update calculation of data
	for build info.  Update libtool macros.  Set NETLIBS for W32
	targets.

2009-08-26  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Test for versioned symbols support.
	(LIBASSUAN_LT_CURRENT, LIBASSUAN_LT_AGE)
	(LIBASSUAN_LT_REVISION): New, set to 0.
	(LIBASSUAN_CONFIG_API_VERSION): Bump to 2.
	(AC_CONFIG_MACRO_DIR, AC_DISABLE_STATIC, AC_LIBTOOL_WIN32_DLL)
	(AC_LIBTOOL_RC, AC_PROG_LIBTOOL, AM_PATH_GPG_ERROR): Invoke.
	(AC_PROG_RANLIB): Don't invoke.
	(HAVE_W32_SYSTEM): New AM conditional.
	(AC_CONFIG_FILES): Add src/versioninfo.rc.