@@ -3,6 +3,8 @@ Noteworthy changes in version 2.0.1 (unreleased)
 
  * Under development.
 
+ * Support for WindowsCE.
+
 
 Noteworthy changes in version 2.0.0 (2010-01-08)
 ------------------------------------------------
