@@ -1,3 +1,15 @@
+2010-01-22  Werner Koch  <wk@g10code.com>
+
+	*  (libtool): 
+
+	* configure.ac: Require libgpg-error 1.8.
+	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
+
+	* ltmain.sh (wrappers_required): Don't set for mingw32ce.
+
+	* autogen.sh: Add option --build-w32ce.  Remove --disable-shared
+	from --build-w32.
+
 2010-01-08  Marcus Brinkmann  <marcus@g10code.de>
 
 	Released 2.0.0.
